k8s/cluster/apps/observability/logstream/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstream
  labels:
    app.kubernetes.io/instance: logstream
    app.kubernetes.io/name: leader
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: logstream
      app.kubernetes.io/name: leader
  template:
    metadata:
      annotations:
        configmap.reloader.stakater.com/reload: logstream
      labels:
        app.kubernetes.io/instance: logstream
        app.kubernetes.io/name: leader
    spec:
      containers:
        - name: logstream-leader
          image: cribl/cribl:3.4.1
          imagePullPolicy: Always
          volumeMounts:
            - name: config-storage
              mountPath: /opt/cribl/config-volume
            - name: initial-config
              mountPath: /var/tmp/config_bits
          ports:
            - name: api
              containerPort: 9000
            - name: leadercomm
              containerPort: 4200
            - name: syslog-udp
              containerPort: 9514
            - name: syslog-unifi
              containerPort: 9520
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 9000
            failureThreshold: 3
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 9000
            failureThreshold: 3
            initialDelaySeconds: 60
          resources:
            limits:
              cpu: 2000m
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: initial-config
          secret:
            secretName: logstream-leader-config-users
        - name: config-storage
          persistentVolumeClaim:
            claimName: logstream-config-v1
