k8s/cluster/apps/observability/logstream/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: logstream
  labels:
    app.kubernetes.io/name: leader
    app.kubernetes.io/instance: logstream
  name: logstream-tcp
spec:
  loadBalancerIP: "${SVC_LOGSTREAM_ADDRESS}"
  ports:
    - name: api
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: leader
    app.kubernetes.io/instance: logstream
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: logstream-udp
  labels:
    app.kubernetes.io/name: leader
    app.kubernetes.io/instance: logstream
  annotations:
    metallb.universe.tf/allow-shared-ip: logstream
spec:
  loadBalancerIP: "${SVC_LOGSTREAM_ADDRESS}"
  ports:
    - name: syslog-udp
      port: 9514
      protocol: UDP
      targetPort: 9514
    - name: syslog-unifi
      port: 9520
      protocol: UDP
      targetPort: 9520
  selector:
    app.kubernetes.io/name: leader
    app.kubernetes.io/instance: logstream
  type: LoadBalancer
