k8s/cluster/apps/observability/logstream/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: logstream
    app.kubernetes.io/name: logstream
  name: logstream
spec:
  ingressClassName: nginx
  rules:
    - host: "logstream.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: logstream
                port:
                  number: 9000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "logstream.${SECRET_DOMAIN}"
